# x3

./: .gitignore  .gitmodules  .travis.yml  Package.resolved  Package.swift  Podfile  README.md
Sources/: AppDelegate.swift  Crawler.swift  HotKeyManager.swift  Info.plist  Tree.swift  WindowManager.swift
Sources/Base.lproj/: MainMenu.xib
Sources/x3/: Crawler.swift  HotKeyManager.swift  Tree.swift  TreeLayout.swift  WindowFrame.swift  WindowManager.swift
Sources/x3App/: AppDelegate.swift  Info.plist  main.swift
Sources/x3Tests/: CrawlerSpec.swift  TreeSpec.swift  WindowManagerSpec.swift
Sources/x3Tests/support/: Helpers.swift
Tests/: CrawlerSpec.swift  TreeSpec.swift  WindowManagerSpec.swift  x3Tests.swift
Tests/support/: Helpers.swift
crates/swell/: .gitignore  Cargo.toml  rustfmt.toml
crates/swell/examples/: devtool.rs
crates/swell/src/: animation.rs  app.rs  hotkey.rs  layout.rs  lib.rs  main.rs  metrics.rs  notification_center.rs  reactor.rs  run_loop.rs  screen.rs  space.rs  tree.rs  util.rs
crates/swell/src/app/: observer.rs
crates/swell/src/model/: layout.rs  layout_tree.rs  mod.rs  node.rs  selection.rs  tree.rs
x3.xcodeproj/: project.pbxproj
x3.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
x3.xcodeproj/xcshareddata/xcschemes/: x3-Package.xcscheme  x3App.xcscheme
x3.xcworkspace/: contents.xcworkspacedata
