[package]
name = "swell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accessibility = { path = "../../../accessibility/accessibility" }
core-foundation = "0.9.4"
core-graphics = "0.23.1"
core-graphics-types = "0.1.3"
icrate = { version = "0.1.0", features = ["Foundation_NSString", "AppKit_NSRunningApplication", "Foundation_NSArray", "AppKit_NSWorkspace", "AppKit", "Foundation_NSNotificationCenter", "Foundation_NSNotification", "Foundation_NSThread"] }
structopt = "0.3.26"
tokio = { version = "1.35.1", features = ["rt", "sync", "macros"] }

[patch.crates-io]
core-foundation = { path = "../../../core-foundation-rs/core-foundation" }
