[package]
name = "swell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accessibility = "0.1.6"
accessibility-sys = "0.1.3"
core-foundation = "0.9.4"
core-graphics = "0.23.1"
core-graphics-types = "0.1.3"
env_logger = "0.10.1"
icrate = { version = "0.1.0", features = ["Foundation_NSString", "AppKit_NSRunningApplication", "Foundation_NSArray", "AppKit_NSWorkspace", "AppKit", "Foundation_NSNotificationCenter", "Foundation_NSNotification", "Foundation_NSThread", "AppKit_NSScreen"] }
log = "0.4.20"
structopt = "0.3.26"
tokio = { version = "1.35.1", features = ["rt", "sync", "macros"] }

[patch.crates-io]
core-foundation = { git = "https://github.com/tmandry/core-foundation-rs", branch = "master" }
core-foundation-sys = { git = "https://github.com/tmandry/core-foundation-rs", branch = "master" }
accessibility = { git = "https://github.com/tmandry/accessibility", branch = "master" }
accessibility-sys = { git = "https://github.com/tmandry/accessibility", branch = "master" }
