[package]
name = "swell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# We don't have a need for unwinding, and aborting means we don't have to worry
# about propagating panics to the main CFRunLoop thread.
#
# However, since panic-abort-tests is not stable yet, we will always build test
# deps with panic=unwind. Therefore dev builds continue to use panic=unwind
# with a panic hook that aborts so we can reuse dependency builds.
[profile]
release.panic = "abort"

[dependencies]
accessibility = "0.1.6"
accessibility-sys = "0.1.3"
bitflags = "2.4.1"
core-foundation = "0.9.4"
core-graphics = "0.23.1"
core-graphics-types = "0.1.3"
icrate = { version = "0.1.0", features = ["Foundation_NSString", "AppKit_NSRunningApplication", "Foundation_NSArray", "AppKit_NSWorkspace", "AppKit", "Foundation_NSNotificationCenter", "Foundation_NSNotification", "Foundation_NSThread", "AppKit_NSScreen", "Foundation_NSNumber"] }
livesplit-hotkey = "0.7.0"
rand = "0.8.5"
static_assertions = "1.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-timing = { version = "0.6.0", features = ["layer"] }
tracing-tree = { version = "0.3.0", features = ["time"] }

[dev-dependencies]
structopt = "0.3.26"
tokio = { version = "1.35.1", features = ["rt", "sync", "macros"] }

[patch.crates-io]
core-foundation = { git = "https://github.com/tmandry/core-foundation-rs", branch = "master" }
core-foundation-sys = { git = "https://github.com/tmandry/core-foundation-rs", branch = "master" }
accessibility = { git = "https://github.com/tmandry/accessibility", branch = "master" }
accessibility-sys = { git = "https://github.com/tmandry/accessibility", branch = "master" }
livesplit-hotkey = { git = "https://github.com/LiveSplit/livesplit-core", branch = "master" }
